# caelus-terminal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
caelus_terminal/: access_gate.py  cli.py  client.py  dashboard.py  replay.py  runtime.py
scripts/: install-macos.sh  release-check.sh  uninstall-macos.sh
tests/: test_access_gate.py  test_cli.py  test_dashboard.py  test_installer.py  test_interactive_cli.py  test_release.py  test_replay.py  test_runs.py  test_runtime.py  test_transcript.py
