[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caelus-terminal"
version = "0.1.6"
description = "Matrix-style terminal chat UI powered by the Hermes Agent runtime"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Asher Menachem"}]
keywords = ["agent", "hermes", "terminal", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/ashermenachem/caelus-terminal"
Source = "https://github.com/ashermenachem/caelus-terminal"

[project.scripts]
caelus = "caelus_terminal.cli:main"

[tool.setuptools]
packages = ["caelus_terminal"]
license-files = ["LICENSE", "NOTICE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
